--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 	<application
 		android:allowBackup="true"
@@ -26,6 +27,7 @@
 				android:name="android.app.searchable"
 				android:resource="@xml/searchable"/>
 		</activity>
+		<service android:name=".PollService"/>
 	</application>
 
 </manifest>
